[#113046107] add white-space: nowrap to fix student list formatting

--- a/src/modules/scheduling/css/courseAttendanceModal.scss
+++ b/src/modules/scheduling/css/courseAttendanceModal.scss
@@ -258,6 +258,7 @@
 			                    max-width: 80px;
 			                    overflow: hidden;
 			                    text-overflow: ellipsis;
+			                    white-space: nowrap;
 			                    float: left;
 			                }
 			            }
